--- a/index.html
+++ b/index.html
@@ -11,7 +11,240 @@
 </head>
 
 <body>
+    <!-- header section start here -->
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- Carousel section start here  -->
+        <section class="container my-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row bg-info d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD Tv For Sports</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
+                                <h1>200$</h1>
+                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row bg-info d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD Tv For Sports</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
+                                <h1>200$</h1>
+                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row bg-info d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD Tv For Sports</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
+                                <h1>200$</h1>
+                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
 
+        <!-- watch bag shoes section start here -->
+
+        <section class="container my-5">
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div
+                        class="p-3 border bg-warning d-flex justify-content-evenly align-items-center text-white rounded-3">
+                        <h1>Watch</h1>
+                        <img width="100px" src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-info d-flex justify-content-evenly align-items-center text-white rounded">
+                        <h1>Watch</h1>
+                        <img width="100px" src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div
+                        class="p-3 border bg-primary d-flex justify-content-evenly align-items-center text-white rounded">
+                        <h1>Watch</h1>
+                        <img width="100px" src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- shoes section start here -->
+        <section class="container my-5">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Supply 350</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to
+                                additional.</p>
+                            <h4>$120</h4>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Nike 360</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h4>$320</h4>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Airmax</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional.</p>
+                            <h4>$350</h4>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Backpack section start here  -->
+        <section class="container my-5">
+            <h1>Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col-lg-4 col-md-6 col-12  ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Laltu Bag</h3>
+                            <h3>$120</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3>Blue Niltu Bag</h3>
+                            <h3>$320</h3>
+                            <p class="card-title">This card has supporting text below as a natural lead-in to
+                                additional content.</p>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Black Kaltu Bag</h3>
+                            <h3>$169</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="p-3">
+                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- form section start here -->
+        <section style="height: 450px;"
+            class="container py-5 bg-info d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <h5 class="fw-bolder text-danger">Get updates on sales, specials and more</h5>
+                <form action="">
+                    <input class="form-control fs-4" type="text" name="" id="" placeholder="Enter Your Gmail">
+                    <button class="btn btn-lg btn-success my-2" type="submit">Submit</button>
+                </form>
+            </div>
+
+        </section>
+    </main>
+    <footer style="height: 300px;" class="container my-5 d-flex justify-content-center align-items-end">
+        <div>
+            <p> @copy; 2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+        </div>
+    </footer>
     <!-- javascript cdn -->
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
