--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Document</title>
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- header section start here -->
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -29,13 +30,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Shoes</a>
+                            <a class="nav-link" aria-current="page" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Backpack</a>
+                            <a class="nav-link" aria-current="page" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Subscribe</a>
+                            <a class="nav-link" aria-current="page" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -48,12 +49,12 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info d-flex align-items-center p-5">
+                        <div class="row pabda-bg-info-color d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD Tv For Sports</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
                                 <h1>200$</h1>
-                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                                <button class="btn btn-lg pabda-btn-color text-white">Bye Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -61,12 +62,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info d-flex align-items-center p-5">
+                        <div class="row pabda-bg-info-color d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD Tv For Sports</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
                                 <h1>200$</h1>
-                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                                <button class="btn btn-lg pabda-btn-color text-white">Bye Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -74,12 +75,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info d-flex align-items-center p-5">
+                        <div class="row pabda-bg-info-color d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD Tv For Sports</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, laudantium.</p>
                                 <h1>200$</h1>
-                                <button class="btn btn-lg btn-warning text-white">Bye Now</button>
+                                <button class="btn btn-lg pabda-btn-color text-white">Bye Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -112,7 +113,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-info d-flex justify-content-evenly align-items-center text-white rounded">
+                    <div
+                        class="p-3 border pabda-bg-info-color d-flex justify-content-evenly align-items-center text-white rounded">
                         <h1>Watch</h1>
                         <img width="100px" src="images/categories/bag.png" alt="">
                     </div>
@@ -128,7 +130,7 @@
         </section>
 
         <!-- shoes section start here -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col-lg-4 col-md-6 col-12 ">
@@ -142,7 +144,7 @@
                             <h4>$120</h4>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +158,7 @@
                             <h4>$320</h4>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +172,7 @@
                             <h4>$350</h4>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +180,7 @@
         </section>
 
         <!--Backpack section start here  -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col-lg-4 col-md-6 col-12  ">
@@ -191,7 +193,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -205,7 +207,7 @@
                                 additional content.</p>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +222,7 @@
                                 height action.</p>
                         </div>
                         <div class="p-3">
-                            <a href="#" class="btn btn-lg btn-success">Bye Now >></a>
+                            <a href="#" class="btn btn-lg pabda-btn-color">Bye Now >></a>
                         </div>
                     </div>
                 </div>
@@ -228,13 +230,14 @@
         </section>
         <!-- form section start here -->
         <section style="height: 450px;"
-            class="container py-5 bg-info d-flex justify-content-center align-items-center rounded-3">
+            class="container py-5 pabda-bg-info-color d-flex justify-content-center align-items-center rounded-3"
+            id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <h5 class="fw-bolder text-danger">Get updates on sales, specials and more</h5>
                 <form action="">
                     <input class="form-control fs-4" type="text" name="" id="" placeholder="Enter Your Gmail">
-                    <button class="btn btn-lg btn-success my-2" type="submit">Submit</button>
+                    <button class="btn btn-lg pabda-btn-color my-2" type="submit">Submit</button>
                 </form>
             </div>
 
